--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -299,6 +299,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0f0100c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "7c338578",
    "metadata": {},
@@ -391,9 +402,6 @@
     }
    ],
    "source": [
-    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
-    "df.head()\n",
-    "\n",
     "df.columns=['description', 'Mars', 'Earth']\n",
     "#inplace=True means that the updated index will remain in place, \n",
     "#without having to reassign the DataFrame to a new variable\n",
@@ -446,8 +454,9 @@
    "hash": "c1cdfd9c308b3300ec17805c8855c20567c3219a326b45c17d47f4891f0dbbc9"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit ('PythonData': conda)",
-   "name": "python3"
+   "display_name": "PythonData",
+   "language": "python",
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
