--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -29,7 +29,9 @@
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 94.0.4606\n",
       "[WDM] - Get LATEST driver version for 94.0.4606\n",
-      "[WDM] - Driver [C:\\Users\\zkoss\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
+      "[WDM] - Get LATEST driver version for 94.0.4606\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_win32.zip\n",
+      "[WDM] - Driver has been saved in cache [C:\\Users\\zkoss\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61]\n"
      ]
     }
    ],
@@ -93,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "\"\\nOctober 17, 2021\\nCelebrate Mars Reconnaissance Orbiter's Views From Above\\nMarking its 15th anniversary since launch, one of the oldest spacecraft at the Red Planet has provided glimpses of dust devils, avalanches, and more.\\n\""
+       "\"\\nOctober 21, 2021\\nNASA's Perseverance Rover Goes Through Trials by Fire, Ice, Light and Sound\\nThe agency's new Mars rover is put through a series of tests in vacuum chambers, acoustic chambers and more to get ready for the Red Planet.\\n\""
       ]
      },
      "execution_count": 5,
@@ -114,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Celebrate Mars Reconnaissance Orbiter's Views From Above\""
+       "\"NASA's Perseverance Rover Goes Through Trials by Fire, Ice, Light and Sound\""
       ]
      },
      "execution_count": 6,
@@ -138,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Celebrate Mars Reconnaissance Orbiter's Views From Above</div>"
+       "<div class=\"content_title\">NASA's Perseverance Rover Goes Through Trials by Fire, Ice, Light and Sound</div>"
       ]
      },
      "execution_count": 7,
@@ -161,7 +163,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Celebrate Mars Reconnaissance Orbiter's Views From Above\""
+       "\"NASA's Perseverance Rover Goes Through Trials by Fire, Ice, Light and Sound\""
       ]
      },
      "execution_count": 8,
@@ -184,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "'Marking its 15th anniversary since launch, one of the oldest spacecraft at the Red Planet has provided glimpses of dust devils, avalanches, and more.'"
+       "\"The agency's new Mars rover is put through a series of tests in vacuum chambers, acoustic chambers and more to get ready for the Red Planet.\""
       ]
      },
      "execution_count": 9,
@@ -299,10 +301,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0f0100c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mars - Earth Comparison</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Diameter:</td>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Distance from Sun:</td>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         0                1                2\n",
+       "0  Mars - Earth Comparison             Mars            Earth\n",
+       "1                Diameter:         6,779 km        12,742 km\n",
+       "2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "3                   Moons:                2                1\n",
+       "4       Distance from Sun:   227,943,824 km   149,598,262 km"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
     "df.head()"
@@ -310,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "7c338578",
    "metadata": {},
    "outputs": [
@@ -396,7 +473,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "b5f72ca4",
    "metadata": {},
    "outputs": [
@@ -421,7 +498,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "5fc50405",
    "metadata": {},
    "outputs": [],
@@ -447,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +545,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +606,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - \n",
+      "\n",
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 94.0.4606\n",
+      "[WDM] - Get LATEST driver version for 94.0.4606\n",
+      "[WDM] - Driver [C:\\Users\\zkoss\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import Splinter, BeautifulSoup, and Pandas\n",
+    "from splinter import Browser\n",
+    "from bs4 import BeautifulSoup as soup\n",
+    "import pandas as pd\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "# Set the executable path and initialize Splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,119 +648,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2. Create a list to hold the images and titles.\n",
     "html = browser.html\n",
-    "mars_soup = soup(html, 'html.parser')\n",
-    "# hemisphere_image_urls = []\n",
-    "# browser.find_by_tag('h3')[0].click()"
+    "Mars_soup = soup(html, 'html.parser')\n",
+    "hemisphere_image_urls = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "#results = Mars_soup.find_all('div',class_='item')\n",
+    "n = 0\n",
+    "for n in range(4):\n",
+    "    hemispheres = {}\n",
+    "\n",
+    "    #Parse from base browser\n",
+    "    html = browser.html\n",
+    "    Mars_soup = soup(html, 'html.parser')\n",
+    "\n",
+    "    #Click into new browser and parse again\n",
+    "    browser.find_by_tag('h3')[n].click()\n",
+    "\n",
+    "    html = browser.html\n",
+    "    Mars_soup = soup(html, 'html.parser')\n",
+    "\n",
+    "    #title\n",
+    "    title = Mars_soup.find('h2', class_='title').text\n",
+    "\n",
+    "    #image url\n",
+    "    img = Mars_soup.find('div', class_='downloads')\n",
+    "    img = img.a['href']\n",
+    "    img_url = f'https://marshemispheres.com/{img}'\n",
+    "    # add to dictionary\n",
+    "    hemispheres = {\n",
+    "                \"img_url\": img_url,\n",
+    "                \"title\": title}\n",
+    "\n",
+    "    #Append list of urls with new dictionary information\n",
+    "    hemisphere_image_urls.append(hemispheres)\n",
+    "\n",
+    "    #back to browser\n",
+    "    browser.back()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/images/schiaparelli_enhanced-full.jpg'"
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "html = browser.html\n",
-    "mars_soup = soup(html, 'html.parser')\n",
-    "img = mars_soup.find('div', class_='downloads')\n",
-    "img = img.a['href']\n",
-    "img_url = f'https://spaceimages-mars.com/{img}'\n",
-    "img_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------\n",
-      "https://spaceimages-mars.com/images/full.jpg\n",
-      "Cerberus Hemisphere Enhanced\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-3bb138125de9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m#title\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[0mtitle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmars_soup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'h2'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;31m#image url\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
-     ]
-    }
-   ],
-   "source": [
-    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "# html = browser.html\n",
-    "# mars_soup = soup(html, 'html.parser')\n",
-    "hemisphere_image_urls = []\n",
-    "results = mars_soup.find_all('div',class_='item')\n",
-    "n = 0\n",
-    "for result in results:\n",
-    "    #parse/ clich on botton\n",
-    "    html = browser.html\n",
-    "    mars_soup = soup(html, 'html.parser')\n",
-    "    page = browser.find_by_tag('h3')[n].click()\n",
-    "\n",
-    "    #title\n",
-    "    title = mars_soup.find('h2', class_='title').text\n",
-    "\n",
-    "    #image url\n",
-    "    img = mars_soup.find('div', class_='downloads')\n",
-    "    img = img.a['href']\n",
-    "    img_url = f'https://spaceimages-mars.com/{img}'\n",
-    "    img_url\n",
-    "\n",
-    "    # add to dictionary\n",
-    "\n",
-    "    #back to browser\n",
-    "    browser.back()\n",
-    "    n= n+1\n",
-    "\n",
-    "    if(img_url and title):\n",
-    "        print('-------------')\n",
-    "        print(img_url)\n",
-    "        print(title)\n",
-    "\n",
-    "    hemisphere_image_urls.append(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hemisphere_image_urls' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-172256043edb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 4. Print the list that holds the dictionary of each image url and title.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mhemisphere_image_urls\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'hemisphere_image_urls' is not defined"
-     ]
     }
    ],
    "source": [
@@ -664,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
